--- a/PRACTICA4.html
+++ b/PRACTICA4.html
@@ -239,7 +239,7 @@ stem(n,x(n));
 n=-2:2;
 E = sum(x(n).^2);
 </pre>
-<img vspace="5" hspace="5" src="Practica_4_09.jpg" alt=""> <img vspace="5" hspace="5" src="Practica_4_10.jpg" alt=""> <h2 id="18">Problema 5</h2>
+<img vspace="5" hspace="5" src="Practica_4_09.jpg" alt="">  <h2 id="18">Problema 5</h2>
 <p>El archivo se encuentra en el repositorio. <a href="<https://github.com/cuinmtv/Practicas---ASyS/blob/main/p4.mlx">Problema_5</a> </p>
 <p class="footer">
 <br>
